exam screen added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,5 +157,7 @@
   }
   
   footer {
-    background-color: aliceblue;
+    background-color: wheat;
+    padding: 5px;
+    line-height: 30px;
   }
