--- a/public/templates/item.html
+++ b/public/templates/item.html
@@ -1,24 +1,9 @@
-<tr>
-    <td>${club_name}</td>
-    <td>${program_name}</td>
-    <td class="text-right">${value}</td>
-    <td class="text-right">${credit}</td>
-    <td class="text-right">${credit_amount}</td>
-    <td class="text-right">${debit}</td>
-    <td class="text-right">${debit_amount}</td>
-    <td class="text-right">${refund}</td>
-    <td class="text-right">${refund_amount}</td>
-    <td class="text-right">${cashback}</td>
-    <td class="text-right">${cashback_amount}</td>
-    <td class="text-right">${reimburse}</td>
-    <td class="text-right">${reimburse_amount}</td>
-    <td class="text-right">${bonus}</td>
-    <td class="text-right">${bonus_amount}</td>
-    <td class="text-right">${expired}</td>
-    <td class="text-right">${expired_amount}</td>
-    <td class="text-right">${balance}</td>
-    <td class="text-right">${balance_amount}</td>
-    <td>
-        <a role="button" href="/loyalty/member/${club_id}/${program_id}" class="view" style="cursor: pointer">View</a>
-    </td>
-</tr>
+<div class="col-md-3 p-3">
+   <div class="card">
+      <div class="card-body">
+         <h5 class="card-title">${DisplayName}</h5>
+         {{html Instructions}}
+         <a role="button" class="btn btn-outline-primary btn-sm float-end view" data-id="${Id}">Start</a>
+      </div>
+   </div>
+</div>
