--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -10,27 +10,9 @@
 		
 			<div class="main">
 				<%- include("../partials/header") %>
-					<div class="container-fluid p-3">
-						<div class="row">
-							<div class="col-12 col-sm-6 col-xxl d-flex">
-								<div class="card illustration flex-fill">
-									<div class="card-body p-0 d-flex flex-fill">
-										<div class="row g-0 w-100">
-											<div class="col-md-12">
-												<div class="illustration-text p-3 m-1">
-													<h4 class="illustration-text">Welcome <span
-															class="displayName">Back,&nbsp;Chris</span>!</h4>
-													<p class="mb-0">Dashboard</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-
-
+					<div class="container-fluid">
+						<div class="row" id="listArea" style="overflow-y: scroll; height: 87vh;">
 						</div>
-
 						
 					</div>
 					<%- include("../partials/footer") %>
