--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer p-1">
     <div class="container-fluid">
         <div class="row text-muted">
             <div class="col-6 text-start">
@@ -19,7 +19,7 @@
             </div>
             <div class="col-6 text-end">
                 <p class="mb-0">
-                    &copy; <%= (new Date()).getFullYear() %> - Conductor
+                    &copy; <%= (new Date()).getFullYear() %>
                 </p>
             </div>
         </div>
